--- a/index.html
+++ b/index.html
@@ -1,89 +1,102 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Start</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css"
-    type="text/css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-  <style>
-    .title {
-      font-size: 2em;
-      font-weight: bold;
-      margin: 0;
-      opacity: 0.8;
-      cursor: pointer;
-      text-align: center;
-    }
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Start</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css"
+        type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <style>
+        .title {
+            font-size: 2em;
+            font-weight: bold;
+            margin: 0;
+            opacity: 0.8;
+            cursor: pointer;
+            text-align: center;
+        }
 
-    .box {
-      margin-top: 20px;
-      background-color: rgba(0, 0, 0, 0.1);
-      padding: 8px 16px;
-      border-radius: 10px;
-    }
+        .box {
+            margin-top: 20px;
+            background-color: rgba(0, 0, 0, 0.1);
+            padding: 8px 16px;
+            border-radius: 10px;
+        }
 
-    .section-title {
-      opacity: 0.8;
-      font-weight: bold;
-      margin-bottom: 12px;
-    }
+        .section-title {
+            opacity: 0.8;
+            font-weight: bold;
+            margin-bottom: 12px;
+        }
 
-    .link {
-      margin-bottom: 8px;
-    }
+        .link {
+            margin-bottom: 8px;
+        }
 
-    .icon {
-      float: left;
-      height: 16px;
-      width: 16px;
-      margin-top: 4px;
-      margin-right: 8px;
-    }
+        .icon {
+            float: left;
+            height: 16px;
+            width: 16px;
+            margin-top: 4px;
+            margin-right: 8px;
+        }
 
-    .icon i {
-      font-size: 1.1em;
-    }
-  </style>
+        .icon i {
+            font-size: 1.1em;
+        }
+    </style>
 </head>
 
 <body>
-  <div class="title">Hi.</div>
+    <div class="title">Hi.</div>
 
-  <div class="row">
+    <div class="row">
 
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <div class="box">
-        <div class="section-title">
-          <span>MAGAZINES</span>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="box">
+                <div class="section-title">
+                    <span>MAGAZINES</span>
+                </div>
+                <div class="link">
+                    <a href="https://arstechnica.com/">Ars Technica</a>
+                </div>
+                <div class="link">
+                    <a href="https://theatlantic.com">The Atlantic</a>
+                </div>
+                <div class="link">
+                    <a href="https://www.quantamagazine.org/">Quanta</a>
+                </div>
+
+            </div>
         </div>
-        <div class="link">
-          <a href="https://arstechnica.com/">Ars Technica</a>
+
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="box">
+                <div class="section-title">
+                    <span>BLOGS</span>
+                </div>
+                <div class="link">
+                    <a href="https://briankoberlein.com/">Brian Koberlein</a>
+                </div>
+                <div class="link">
+                    <a href="https://bigthink.com/starts-with-a-bang/">Starts with a bang</a>
+                </div>
+                <div class="link">
+                    <a href="http://backreaction.blogspot.com/">Backreaction</a>
+                </div>
+                <div class="link">
+                    <a href="http://astrorhysy.blogspot.com/">Astrorhysy</a>
+                </div>
+                <div class="link">
+                    <a href="https://ciechanow.ski/archives/">Ciechanowski</a>
+                </div>
+
+            </div>
         </div>
-      </div>
     </div>
-
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <div class="box">
-        <div class="section-title">
-          <span>BLOGS</span>
-        </div>
-        <div class="link">
-          <a href="https://briankoberlein.com/">Brian Koberlein</a>
-        </div>
-        <div class="link">
-          <a href="https://bigthink.com/starts-with-a-bang/">Starts with a bang</a>
-        </div>
-        <div class="link">
-          <a href="http://backreaction.blogspot.com/">Backreaction</a>
-        </div>
-        
-      </div>
-    </div>
-  </div>
 </body>
 
 </html>
