--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@
                     <a href="https://theatlantic.com">The Atlantic</a>
                 </div>
                 <div class="link">
+                    <a href="https://www.newyorker.com/">New Yorker</a>
+                </div>
+                <div class="link">
                     <a href="https://www.quantamagazine.org/">Quanta</a>
                 </div>
+                
+                
 
             </div>
         </div>
